[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/spritesheets/spritesheet_retina.png" type="Texture" id=1]
[ext_resource path="res://src/weapons/GrapplingHook.gd" type="Script" id=2]
[ext_resource path="res://src/effects/Trail.gd" type="Script" id=3]
[ext_resource path="res://images/characters/player frames/spr_ArcherAttack_strip_NoBkg.png" type="Texture" id=4]
[ext_resource path="res://sounds/sfx/Launch Sound.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/sfx/Attack_Sound.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5932, 17.8338 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.2069, 28.7576 )

[node name="GrapplingHook" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 20.5337, -2.16144 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 2496, 48, 22, 8 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 46.2361, -0.233757 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1151, 50, 6, 6 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 944, 8, 32, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 19.2408, -7.62939e-06 )
scale = Vector2( 1, 0.28 )
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 21.5634, 1.10006 )
scale = Vector2( 0.834496, 0.234496 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Node" type="Node" parent="."]

[node name="Trail" type="Line2D" parent="Node"]
z_index = -1
z_as_relative = false
width = 2.0
default_color = Color( 1, 1, 1, 1 )
script = ExtResource( 3 )

[node name="PlayerMoveTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="LaunchTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 2.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 3.0
autoplay = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="PlayerMoveTimer" to="." method="_on_PlayerMoveTimer_timeout"]
[connection signal="timeout" from="LaunchTimer" to="." method="_on_LaunchTimer_timeout"]
